# spel-admin-authority

./: CONTEXT.md  Cargo.toml  LICENSE  README.md
admin-authority/: Cargo.toml
admin-authority-macros/: Cargo.toml
admin-authority-macros/src/: lib.rs
admin-authority-sample/: Cargo.toml
admin-authority-sample-manual/: Cargo.toml
admin-authority-sample-manual/src/: main.rs
admin-authority-sample-manual/tests/: idl.rs
admin-authority-sample/src/: main.rs
admin-authority-sample/tests/: idl.rs
admin-authority/src/: lib.rs
docs/: authority-lifecycle.md  dry-run-output.txt  toolchain-and-macros-study.md
docs/adr/: 0001-admin-config-pda-seed.md  0002-lez-program-must-be-outer-attribute.md  0003-require-admin-strict-by-default.md  0004-require-admin-injection-contract.md  0005-self-election-via-caller.md  0006-param-injection-and-relaxed-mode.md  0007-embedded-admin-slot.md
scripts/: dry-run.sh
