[package]
name = "admin-authority-sample-manual"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
borsh = { version = "1", features = ["derive"] }
admin-authority = { path = "../admin-authority" }
spel-framework = { git = "https://github.com/mmlado/spel.git", branch = "feat/admin_authority" }
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.1.2" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
spel-framework-core = { git = "https://github.com/mmlado/spel.git", branch = "feat/admin_authority", features = ["idl-gen"] }