[package]
name = "admin-authority-sample"
version = "0.1.0"
edition = "2024"

[dependencies]
borsh = { version = "1", features = ["derive"] }
admin-authority = { path = "../admin-authority" }
spel-framework = { git = "https://github.com/mmlado/spel.git", branch = "feat/wrap_instructions_m2" }
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0", package = "lee_core" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
spel-framework-core = { git = "https://github.com/mmlado/spel.git", branch = "feat/wrap_instructions_m2", features = ["idl-gen"] }
