[package]
name = "admin-authority"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[package.metadata.spel]
extension_attr = "admin_authority"

[[package.metadata.spel.inject]]
wrapper = "require_admin"

  [[package.metadata.spel.inject.account]]
  name = "admin_config"
  seed = { const = "admin_config" }

  [[package.metadata.spel.inject.account]]
  name = "caller"
  signer = true

[dependencies]
borsh = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
spel-framework = { git = "https://github.com/mmlado/spel.git", branch = "feat/wrap_instructions" }
admin-authority-macros  = { path = "../admin-authority-macros"}