[package]
name = "admin-authority"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[package.metadata.spel]
extension_attr = "admin_authority"

[dependencies]
borsh = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
spel-framework = { git = "https://github.com/mmlado/spel.git", rev = "c701b7836494f73be46c4e38d8fb1e27d0dfe6f6" }
admin-authority-macros  = { path = "../admin-authority-macros"}